:bug: Hide textarea visible at start

--- a/src/style.sass
+++ b/src/style.sass
@@ -21,6 +21,10 @@
 body
     background: #27282d
 
+// Textarea
+.textarea
+    display: none
+
 // Button
 .button
     position: absolute
